--- a/template.prod.html
+++ b/template.prod.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>NF - Freitas Bastos</title>
+    <title>Crypto Monitor</title>
   </head>
   <body>
     <div id="root"></div>
